index.css
/* 
purple #9B26B6;
blue #64CCC9; rbg(100, 204, 201)
orange #FF8200 rgb(255,130,0);
*/

body {
  font-family: 'Varela Round', sans-serif;
  --blue: #64CCC9;
  --orange: #FF8200;
  --purple: #9B26B6;
}

nav {
  display: block;
  width: 100%;
  height: 70px;
  background-color: #fff;
  font-size: 0.8em;
}

a { 
  color: inherit; 
  text-decoration: none;
  cursor: pointer;
} 

.logo {
  float: left;
  display: inline;
  padding: 5px 50px 10px 50px;
}

nav ul {
  display: inline;
}

nav li {
  list-style: none;
  line-height: 80px;
}

.nav-mobile {
  display: flex;
  flex: 1;
  width: 100%;
  flex-direction: column;
  justify-content: flex-start;
  align-content: flex-start;
  line-height: 20px;
  float: left;
  background-color: #fff;
  /*z-index: 100;*/
}

.button-collapse {
  display: none;
}

.nav-full li {
  margin: 0px 100px;
}


.nav-left {
  margin-right: 20px;
  color: #000;
  float: left;
}

.nav-left:hover {
  color: #FF8200;
}

.nav-right {
  float: right;
}

.nav-pill {
  margin: 10px;
  border: 1px solid black;
  border-radius: 8px;
  padding: 7px;
  color: #000;
}

.nav-pill:hover {
  border: 1px solid #64CCC9;
  color: #64CCC9;
}

.purple {
  color: var(--purple);
}

.blue {
  color: var(--blue);
}

.orange {
  color: var(--orange);
}

.icon {
  padding: 28px 10px;
}

/* HOME */

.home-bk {
  width: 100%;
}

.home-sec1 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  height: 500px;
  overflow: hidden;
}

.home-nav-pill {
  margin: 20px;
  border: 1.5px solid #9B26B6;
  border-radius: 8px;
  font-size: 0.5em;
  font-weight: bold;
  padding: 7px;
  color: #9B26B6;
  background-color: rgba(255,255,255,0.6);
  text-shadow: 2px 4px 3px rgba(255,255,255,0.3);
}

.home-nav-pill:hover {
  border: 1px solid #FF8200;
  color: #FFF;
  background-color: #FF8200;
}

.flex-col {
  position: absolute;
  top: 400px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  font-size: 2.5em;
  color: #fff;
}

.flex-col span {
  padding: 5px;
}

#video-background {
  min-width: 100%; 
  min-height: 100%;
  width: 100%; 
  z-index: -100000;
}

.home-sec2 {
  height: 400px;
  width: 100%;
  position: relative;
  margin: 0 auto 5%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.card {
  width: 20%;
  padding: 0px 20px 30px;
  margin: 20px;
  border: 5px solid #dddbd9;
  border-radius: 8px;
  text-align: center;
  font-size: 1.2em;
  opacity: 0.6;
}

.card img {
  width: 100%;
}

.card.card-active {
  width: 25%;
  opacity: 1;
  border: 5px solid #ff9933;
}

.home-sec4 {
  width: 80%;
  font-size: 1.2em;
  display: flex;
  flex-direction: row;
  justify-content: center; 
  align-items: center;
  flex-wrap: wrap;
  margin: auto;
}

.home-bottomCard {
  width: 28%; 
  margin: 2%; 
  box-shadow: 7px 7px 5px rgba(239,239,239,0.3);
}

.home-bottomCard img {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.home-bottomCardTxt {
  height: 150px;
  padding: 10px 5px; 
  text-align:center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.orange-theme {
  color: #fff; 
  background-color:#FF8300; 
}

.blue-theme {
  color: #fff; 
  background-color:#64CCC9; 
}

.purple-theme {
  color: #fff; 
  background-color:#B52CD2; 
}

.hover-orange:hover {
  color: #FF8200;
}

.hover-purple:hover {
  color: #9B26B6;
}

.home-bottomCardTxt span {
  margin: 10px 3px;
}

.home-bottom-cards {
  position: relative;
  height: auto;
  background: url(modules/assets/resize_img39.png) no-repeat;
  background-size: cover;
  background-position: top;
  min-height: 1000px;
}

.home-sec3 {
  font-size: 1.5em;
  display: block;
  height: 500px;
  position: relative;
}


.gallery-img {
  display: block;
  margin: auto;
  width: 100%;
  padding: 30px 0px;
}

.gallery-bander {
  position: absolute;
  top: 25%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-left: 20px;
}

.gallery-btn {
  border-radius: 5px;
  background-color: #64CCC9;
  color: #fff;
  padding: 5px 10px;
  margin-left: 15px;
}

.gallery-btn:hover {
  color: #64CCC9;
  border: 2px solid #64CCC9;
  background-color: rgba(255,255,255,0.5);
}

.home-impact {
  display:flex; 
  flex-direction:row; 
  justify-content:center; 
  align-items:center; 
  width:80%; 
  margin:auto; 
  padding:5%;
}

.home-impact-item {
  width: 50%;
}

.purple-btn {
  border-radius: 5px;
  border: 2px solid #9B26B6;
  background-color: #9B26B6;
  color: #fff;
  padding: 5px 10px;
  margin-left: 15px;
}

.purple-btn:hover {
  color: #9B26B6;
  border: 2px solid #9B26B6;
  background-color: rgba(255,255,255,0.5);
}

.orange-btn {
  border-radius: 5px;
  border: 2px solid var(--orange);
  background-color: var(--orange);
  color: #fff;
  padding: 5px 10px;
  margin-left: 15px;
}

.orange-btn:hover {
  color: var(--orange);
  border: 2px solid var(--orange);
  background-color: rgba(255,255,255,0.5);
}

.fa-arrow-circle-left, .fa-arrow-circle-right {
  font-size: 2em;
  color: #d8d8d8;
}

.fa-arrow-circle-left {
  position: absolute;
  top: 230px;
  left: 150px;
  float: left;
}

.fa-arrow-circle-right {
  position: absolute;
  top: 230px;
  right: 150px;
  float: right;
}

.bullets-container {
  height: 50px;
  text-align: center;
}

.bullet {
  font-size: 35px;
  padding: 8px;
  color: #dddbd9;
  align-items: center;
  cursor: pointer;
}

.bullet.bullet-active {
  color: #ff9933;
}

.newsletter {
  font-size: 1.2em;
  padding-top: 30px;
}

.newsletter input {
  line-height: 29px;
  width: 40%;
  border: 1px solid #9B26B6;
}

.newsletter button {
  font-size: 1em;
  color: #fff;
  border: 2px solid #9B26B6;
  background-color: #9B26B6;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  border: 0px;
  padding: 6px 10px;
}
/* ... */

